--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -13,28 +13,28 @@
 * {box-sizing:border-box}
 
 body {
-	font-family: 'NotoSansKR', 'Nanum Gothic', "Times New Roman", Times, sans-serif;
-	background-color: transparent;
-	margin:0;
-	padding:0;
-	text-align:center;
+    font-family: 'NotoSansKR', 'Nanum Gothic', "Times New Roman", Times, sans-serif;
+    background-color: transparent;
+    margin:0;
+    padding:0;
+    text-align:center;
 }
 #wrap, #headerwrap, #section, #footer {
-	max-width:1000px;
-	margin:0 auto;
-	padding:0;
-	text-align:left;
+    max-width:1000px;
+    margin:0 auto;
+    padding:0;
+    text-align:left;
 }
 
+<!-- 상단 광고 -->
 h2{
     font-size:3rem;
 }
-
+<!-- 상단 고정메뉴 -->
 .affix {
       top: 0;
       width: 100%;
 }
-
 .affix + .container-fluid {
       padding-top: 70px;
 }
@@ -45,7 +45,7 @@ h2{
     border-bottom:1px solid #ddd;
     z-index: 1000;
 }
-
+<!-- 최상단 메뉴 -->
 ul.nav-tabs {
     list-style: none;
     background-color: transparent;
@@ -90,13 +90,14 @@ ul.breadcrumb li a:hover {
     text-decoration: underline;
 }
 ul.breadcrumb .member_rate {
-	font-size: 1.2rem;
-	color: #fff;
-	background-color: red;
-	padding:3px 5px;
-	margin-right:10px;
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: red;
+    padding:3px 5px;
+    margin-right:10px;
 }
-
+<!-- 최상단 메뉴 끝 -->
+<!-- 최상단 로고 검색창 -->
 .navbar-brand {
     font-size:2.6rem;
     color:#0275d8;
@@ -131,7 +132,10 @@ ul.breadcrumb .member_rate {
     width:170px;
     height:68px;
 }
+<!-- 공통 상단 메뉴 끝 -->
 
+<!-- 메인전용 시작 -->
+<!-- 메인슬라이드 시작 -->
 .mySlides {display:none}
 
 /* Slideshow container */
@@ -231,7 +235,8 @@ ul.slideshow_list li a:hover {
 @media only screen and (max-width: 300px) {
   .text {font-size: 0.687rem}
 }
-
+<!-- 메인슬라이드 끝 -->
+<!-- 메인왼쪽메뉴 시작 -->
 .main_lmenu {
     list-style: none outside;
     margin:0;
@@ -251,7 +256,7 @@ ul.slideshow_list li a:hover {
 .main_lmenu li a{
     color:#000;
 }
-
+<!-- 메인 중앙책분류 시작 -->
 .main_book_img{
     height:122px;
     width: 100%;;
@@ -290,7 +295,8 @@ ul.slideshow_list li a:hover {
      padding:5px 7px 0 10px;
      float:left;
 }
-
+<!-- 메인 중앙책분류 끝 -->
+<!-- 메인 오른쪽 광고 베스트셀러 시작 -->
 #ad2 {
     border:1px solid #e6f2ff;
     background-color: transparent;
@@ -347,7 +353,9 @@ ul.slideshow_list li a:hover {
     width:65px;
     height:auto;
 }
+<!-- 메인 오른쪽 끝 -->
 
+<!-- 공통 하단 시작 -->
 #footer {
     padding:20px 10px;
     font-size:1.2rem;
@@ -385,7 +393,9 @@ ul.slideshow_list li a:hover {
     color: #333;
     text-decoration: underline;
 }
+<!-- 공통 하단 끝 -->
 
+<!-- 고정 탑 메뉴 -->
 #MOVE_TOP_BTN{
     position: fixed; 
     bottom: 10px; 
@@ -399,64 +409,64 @@ ul.slideshow_list li a:hover {
 
 <body>
 <div class="container-fluid">
-	<div class="row">
-	   <div class="col-sm-6 text-right" style="background-color:#ffd11a;height:70px;">
-	     <h2 style="margin-right:7%"><span class="glyphicon">&#xe233;</span> 북앤카페 새학기 맞이 대잔치</h2>
-	   </div>
-	   <div class="col-sm-6 text-left" style="background-color:#ff99bb;height:70px;">
-	     <h2 style="margin-left:7%"><span class="glyphicon">&#xe103;</span> 봄도 독서의 계절, 졸음싹 커피</h2>
-	   </div>
-	</div>
+    <div class="row">
+       <div class="col-sm-6 text-right" style="background-color:#ffd11a;height:70px;">
+         <h2 style="margin-right:7%"><span class="glyphicon">&#xe233;</span> 북앤카페 새학기 맞이 대잔치</h2>
+       </div>
+       <div class="col-sm-6 text-left" style="background-color:#ff99bb;height:70px;">
+         <h2 style="margin-left:7%"><span class="glyphicon">&#xe103;</span> 봄도 독서의 계절, 졸음싹 커피</h2>
+       </div>
+    </div>
 </div>
 <nav class="headerwrap" data-spy="affix" data-offset-top="97">
     <div class="row" id="wrap">
-	   <div class="col-md-12"> 
-	       <div class="row" >
-	           <div class="col-md-6">
-	                <ul class="nav nav-tabs">
+       <div class="col-md-12"> 
+           <div class="row" >
+               <div class="col-md-6">
+                    <ul class="nav nav-tabs">
                        <li class="active">
-	                       <a>Home</a>
-	                   </li>
-	                   <li>
-	                       <a href="#">국내도서</a>
-	                   </li>
-	                   <li>
-	                       <a href="#">외국도서</a>
-	                   </li>
-	                   <li>
-	                       <a href="#">eBook</a>
-	                   </li>                                                            
-	               </ul>
-	           </div>
-	           <div class="col-md-6 text-right">
-	               <ul class="breadcrumb" style="height:36px">
-	               		<!--  li>
-	                       <span class="member_rate"> 회원등급 </span> <a href="main.html"><b>회원아이디</b>님</a> <span class="divider"></span>
-	                   </li>
-	                   <li>
-	                       <a href="main.html">로그아웃</a> <span class="divider"></span>
-	                   </li-->
-	                   <li>
-	                       <a href="./member/login.html">로그인</a> <span class="divider"></span>
-	                   </li>
-	                   <li>
-	                       <a href="./member/join.html">회원가입</a> <span class="divider"></span>
-	                   </li>
-	                   <li>
-	                       <a href="#">마이페이지</a> <span class="divider"></span>
-	                   </li>
-	                   <li>
-	                       <a href="#">장바구니</a>
-	                   </li>
-	               </ul>
-	           </div>
-	       </div>
-	   </div>
+                           <a>Home</a>
+                       </li>
+                       <li>
+                           <a href="#">국내도서</a>
+                       </li>
+                       <li>
+                           <a href="#">외국도서</a>
+                       </li>
+                       <li>
+                           <a href="#">eBook</a>
+                       </li>                                                            
+                   </ul>
+               </div>
+               <div class="col-md-6 text-right">
+                   <ul class="breadcrumb" style="height:36px">
+                        <!--  li>
+                           <span class="member_rate"> 회원등급 </span> <a href="main.html"><b>회원아이디</b>님</a> <span class="divider"></span>
+                       </li>
+                       <li>
+                           <a href="main.html">로그아웃</a> <span class="divider"></span>
+                       </li-->
+                       <li>
+                           <a href="./member/login.html">로그인</a> <span class="divider"></span>
+                       </li>
+                       <li>
+                           <a href="./member/join.html">회원가입</a> <span class="divider"></span>
+                       </li>
+                       <li>
+                           <a href="#">마이페이지</a> <span class="divider"></span>
+                       </li>
+                       <li>
+                           <a href="#">장바구니</a>
+                       </li>
+                   </ul>
+               </div>
+           </div>
+       </div>
     </div>
 </nav>
 
 <header id="headerwrap">
-    <div class="container-fluid">	   
+    <div class="container-fluid">      
         <div class="row">
             <div class="col-md-2">
               <a class="navbar-brand" href="#"><span class="glyphicon">&#xe043;</span><font>&#38;</font>cafe</a>
@@ -467,19 +477,19 @@ ul.slideshow_list li a:hover {
                     <select class="form-control" id="sel1">
                         <option>통합검색</option>
                         <option>국내도서</option>
-	                    <option>외국도서</option>
-	                    <option>eBook</option>
-	                </select>
+                        <option>외국도서</option>
+                        <option>eBook</option>
+                    </select>
                     <input type="text" class="form-control" id="search" />                            
                     <button type="submit" class="btn btn-primary">검색</button>
                     <button type="button" class="btn btn-link"><strong>상세검색</strong></button>
                 </form>
             </div>
-	        <div class="col-md-3">
-	           <div id="ad1">
-	               <img alt="Bootstrap Image Preview" src="./img/main/161111_head_mgt.jpg" />
-	           </div>
-	        </div>
+            <div class="col-md-3">
+               <div id="ad1">
+                   <img alt="Bootstrap Image Preview" src="./img/main/161111_head_mgt.jpg" />
+               </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-2">
@@ -508,34 +518,36 @@ ul.slideshow_list li a:hover {
         </div>
     </div>
 </header>
-   
+<!-- 공통 상단 끝 -->
+
+<!-- 메인 화면 시작 -->   
 <section id="section">
     <div class="row">
         <div class="col-md-12">
-	        <div class="panel panel-default">
-	            <div class="slideshow-container panel-body">                    
-	                <div class="mySlides fade slide-4">	                    
-	                    <img alt="slide-MD초이스1" src="./img/main/170228_book01.png" />
-	                    <img alt="slide-MD초이스2" src="./img/main/170228_book02.png" />
-	                    <img alt="slide-MD초이스3" src="./img/main/170228_book03.png" />
-	                    <img alt="slide-MD초이스4" src="./img/main/170228_book04.png" />
-	                    <div class="text">MD 초이스</div>
-	                </div>
-	                <div class="mySlides fade slide-4">	                    
-	                    <img alt="slide-신간소개1" src="./img/main/170306_ad05.png" />
+            <div class="panel panel-default">
+                <div class="slideshow-container panel-body">                    
+                    <div class="mySlides fade slide-4">                     
+                        <img alt="slide-MD초이스1" src="./img/main/170228_book01.png" />
+                        <img alt="slide-MD초이스2" src="./img/main/170228_book02.png" />
+                        <img alt="slide-MD초이스3" src="./img/main/170228_book03.png" />
+                        <img alt="slide-MD초이스4" src="./img/main/170228_book04.png" />
+                        <div class="text">MD 초이스</div>
+                    </div>
+                    <div class="mySlides fade slide-4">                     
+                        <img alt="slide-신간소개1" src="./img/main/170306_ad05.png" />
                         <img alt="slide-신간소개2" src="./img/main/170306_ad06.png" />
                         <img alt="slide-신간소개3" src="./img/main/170306_ad07.png" />
                         <img alt="slide-신간소개4" src="./img/main/170306_ad08.png" />
-	                    <div class="text">신간소개</div>
-	                </div>
-	                <div class="mySlides fade slide-4">	                    
-	                    <img alt="slide-이벤트도서1" src="./img/main/170307_book01.png" />
+                        <div class="text">신간소개</div>
+                    </div>
+                    <div class="mySlides fade slide-4">                     
+                        <img alt="slide-이벤트도서1" src="./img/main/170307_book01.png" />
                         <img alt="slide-이벤트도서2" src="./img/main/170307_book02.png" />
                         <img alt="slide-이벤트도서3" src="./img/main/170307_book03.png" />
                         <img alt="slide-이벤트도서4" src="./img/main/170307_book04.png" />
-	                    <div class="text">이벤트도서</div>
-	                </div>
-	                <div class="mySlides fade slide-4">                        
+                        <div class="text">이벤트도서</div>
+                    </div>
+                    <div class="mySlides fade slide-4">                        
                         <img alt="slide-화제의 책1" src="./img/main/170310_ad01.png" />
                         <img alt="slide-화제의 책2" src="./img/main/170310_ad02.png" />
                         <img alt="slide-화제의 책3" src="./img/main/170310_ad03.png" />
@@ -550,8 +562,8 @@ ul.slideshow_list li a:hover {
                         <img alt="slide-e-Book3" src="./img/main/170307_ebookgoods.jpg" />
                         <div class="text">e-Book</div>
                     </div>               
-	            </div>
-	            <div class="col-md-12 text-center panel-footer" id="slideshow_list">
+                </div>
+                <div class="col-md-12 text-center panel-footer" id="slideshow_list">
                    <ul class="slideshow_list">
                        <li>
                            <a onclick="currentSlide(1)">MD 초이스</a><span class="divider"></span>
@@ -569,9 +581,9 @@ ul.slideshow_list li a:hover {
                            <a onclick="currentSlide(5)">e-Book</a><span class="divider"></span>
                        </li>
                    </ul>
-               </div>	           
-	        </div>
-	   </div>
+               </div>              
+            </div>
+       </div>
     </div>   
     <div class="row">
         <div class="col-md-2">
@@ -826,46 +838,47 @@ ul.slideshow_list li a:hover {
                 </p>
             </div>
         </div>
-    </div>
+    </div>    
     <div class="col-md-3">
         <div class="row">
             <div class="col-md-12">
                 <div id="ad2">
                     <img alt="ad2" src="./img/main/170320_ebook.jpg" />
                 </div>
-	        </div>
-	    </div>
+            </div>
+        </div>
         <div class="row">
-           	<div class="col-md-12">
-               	<div class="best10">
-					<div class="title">베스트셀러 <font color="#0275d8">TOP10</font></div>
-                       	<ul class="best10_text">
-	                  		<li>
-	                      		<div class="best10_1">
-		                      		<div class="number active">1</div>
-		                      		<div class="best10_img">	                      
-		                          		<img alt="ad2" src="./img/main/8971998016_1.jpg" />
-		                      			국가란 무엇인가 - 2017 개정신판<br />유시민
-		                      		</div>
-	                      		</div>	                      
-		                  	</li>
-		                  	<li><div class="number">2</div>2017 선재국어 나침판 실전...</li>
-		                  	<li><div class="number">3</div>자존감 수업</li>
-		                  	<li><div class="number">4</div>나쁜 페미니스트</li>
-		                  	<li><div class="number">5</div>우리에겐 언어가 필요하다</li>
-		                  	<li><div class="number">6</div>유혹하는 글쓰기 (특별판)</li>
-		                  	<li><div class="number">7</div>언어의 온도</li>
-		                  	<li><div class="number">8</div>2017 민준호 사회 실전동형...</li>
-		                  	<li><div class="number">9</div>82년생 김지영</li>
-		                  	<li><div class="number">10</div>2017 이동기 영어 실전동형...</li>
-		              	</ul>
-	               	</div>
-	            </div>
-	        </div>
-	    </div>
-	</div>
+            <div class="col-md-12">
+                <div class="best10">
+                    <div class="title">베스트셀러 <font color="#0275d8">TOP10</font></div>
+                        <ul class="best10_text">
+                            <li>
+                                <div class="best10_1">
+                                    <div class="number active">1</div>
+                                    <div class="best10_img">                          
+                                        <img alt="ad2" src="./img/main/8971998016_1.jpg" />
+                                        국가란 무엇인가 - 2017 개정신판<br />유시민
+                                    </div>
+                                </div>                        
+                            </li>
+                            <li><div class="number">2</div>2017 선재국어 나침판 실전...</li>
+                            <li><div class="number">3</div>자존감 수업</li>
+                            <li><div class="number">4</div>나쁜 페미니스트</li>
+                            <li><div class="number">5</div>우리에겐 언어가 필요하다</li>
+                            <li><div class="number">6</div>유혹하는 글쓰기 (특별판)</li>
+                            <li><div class="number">7</div>언어의 온도</li>
+                            <li><div class="number">8</div>2017 민준호 사회 실전동형...</li>
+                            <li><div class="number">9</div>82년생 김지영</li>
+                            <li><div class="number">10</div>2017 이동기 영어 실전동형...</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-
+<!-- 메인 화면 끝 -->
+ 
 <!-- 맨아래 탑버튼 -->
 <img id="MOVE_TOP_BTN" src="./img/main/btn_top2.png" alt="맨위로">
 <script>
@@ -887,7 +900,7 @@ $(function() {
 });
 </script>
 
-<!-- 하단 -->
+<!-- 공통 하단 -->
 <footer id="footer">
     <div class="row">
         <div class="col-md-12">
@@ -925,18 +938,18 @@ $(function() {
         </div>
         <div class="col-md-5">
             <div style="width:50%;float: left;">   
-	            <address>
-	                <strong>Book&Cafe, Inc.</strong><br /> 대표이사 : 윤광재<br /> <abbr title="Phone">전화상담 : 02) 1234-5678</abbr><br />
-	                사업자등록 : 
-	                <div style="position: absolute;width:100%;clear: left;margin:0;">서울 종로구 종로12길 15 코아빌딩1 5층  <a href="http://naver.me/xicaa2oH" target="blank">약도</a></div>
-	            </address>
-	            
-	        </div>
-	        <div style="width:50%;float: left;">               
-	            <address>
-	                <strong></strong><br /> 고객정보보호 책임자:<br /> E-mail:<br /> 통신판매업신고:
-	            </address>
-	        </div>	        
+                <address>
+                    <strong>Book&Cafe, Inc.</strong><br /> 대표이사 : 윤광재<br /> <abbr title="Phone">전화상담 : 02) 1234-5678</abbr><br />
+                    사업자등록 : 
+                    <div style="position: absolute;width:100%;clear: left;margin:0;">서울 종로구 종로12길 15 코아빌딩1 5층  <a href="http://naver.me/xicaa2oH" target="blank">약도</a></div>
+                </address>
+                
+            </div>
+            <div style="width:50%;float: left;">               
+                <address>
+                    <strong></strong><br /> 고객정보보호 책임자:<br /> E-mail:<br /> 통신판매업신고:
+                </address>
+            </div>          
         </div>   
         <div class="col-md-5">               
             <address>
