css 주석 오류 수정

--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -26,11 +26,11 @@ body {
     text-align:left;
 }
 
-<!-- 상단 광고 -->
+/* 상단 광고 */
 h2{
     font-size:3rem;
 }
-<!-- 상단 고정메뉴 -->
+/* 상단 고정메뉴 */
 .affix {
       top: 0;
       width: 100%;
@@ -45,7 +45,7 @@ h2{
     border-bottom:1px solid #ddd;
     z-index: 1000;
 }
-<!-- 최상단 메뉴 -->
+/* 최상단 메뉴*/
 ul.nav-tabs {
     list-style: none;
     background-color: transparent;
@@ -96,8 +96,8 @@ ul.breadcrumb .member_rate {
     padding:3px 5px;
     margin-right:10px;
 }
-<!-- 최상단 메뉴 끝 -->
-<!-- 최상단 로고 검색창 -->
+/* 최상단 메뉴 끝 */
+/* 최상단 로고 검색창 */
 .navbar-brand {
     font-size:2.6rem;
     color:#0275d8;
@@ -132,10 +132,10 @@ ul.breadcrumb .member_rate {
     width:170px;
     height:68px;
 }
-<!-- 공통 상단 메뉴 끝 -->
+/* 공통 상단 메뉴 끝 */
 
-<!-- 메인전용 시작 -->
-<!-- 메인슬라이드 시작 -->
+/* 메인전용 시작 */
+/* 메인슬라이드 시작 */
 .mySlides {display:none}
 
 /* Slideshow container */
@@ -256,7 +256,7 @@ ul.slideshow_list li a:hover {
 .main_lmenu li a{
     color:#000;
 }
-<!-- 메인 중앙책분류 시작 -->
+/* 메인 중앙책분류 시작 */
 .main_book_img{
     height:122px;
     width: 100%;;
@@ -295,8 +295,8 @@ ul.slideshow_list li a:hover {
      padding:5px 7px 0 10px;
      float:left;
 }
-<!-- 메인 중앙책분류 끝 -->
-<!-- 메인 오른쪽 광고 베스트셀러 시작 -->
+/* 메인 중앙책분류 끝 */
+/* 메인 오른쪽 광고 베스트셀러 시작 */
 #ad2 {
     border:1px solid #e6f2ff;
     background-color: transparent;
@@ -353,9 +353,9 @@ ul.slideshow_list li a:hover {
     width:65px;
     height:auto;
 }
-<!-- 메인 오른쪽 끝 -->
+/* 메인 오른쪽 끝 */
 
-<!-- 공통 하단 시작 -->
+/* 공통 하단 시작 */
 #footer {
     padding:20px 10px;
     font-size:1.2rem;
@@ -393,9 +393,9 @@ ul.slideshow_list li a:hover {
     color: #333;
     text-decoration: underline;
 }
-<!-- 공통 하단 끝 -->
+/* 공통 하단 끝 */
 
-<!-- 고정 탑 메뉴 -->
+/* 고정 탑 메뉴 */
 #MOVE_TOP_BTN{
     position: fixed; 
     bottom: 10px; 
