--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -235,8 +235,8 @@ ul.slideshow_list li a:hover {
 @media only screen and (max-width: 300px) {
   .text {font-size: 0.687rem}
 }
-<!-- 메인슬라이드 끝 -->
-<!-- 메인왼쪽메뉴 시작 -->
+/* 메인슬라이드 끝 */
+/* 메인왼쪽메뉴 시작 */
 .main_lmenu {
     list-style: none outside;
     margin:0;
