--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -5,406 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="./bookcafe.css">
+<link rel="stylesheet" href="./main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style type="text/css">
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
-* {box-sizing:border-box}
-
-body {
-    font-family: 'NotoSansKR', 'Nanum Gothic', "Times New Roman", Times, sans-serif;
-    background-color: transparent;
-    margin:0;
-    padding:0;
-    text-align:center;
-}
-#wrap, #headerwrap, #section, #footer {
-    max-width:1000px;
-    margin:0 auto;
-    padding:0;
-    text-align:left;
-}
-
-/* 상단 광고 */
-h2{
-    font-size:3rem;
-}
-/* 상단 고정메뉴 */
-.affix {
-      top: 0;
-      width: 100%;
-}
-.affix + .container-fluid {
-      padding-top: 70px;
-}
-
-.headerwrap{
-    background-color:#33afe9;
-    height:36px;
-    border-bottom:1px solid #ddd;
-    z-index: 1000;
-}
-/* 최상단 메뉴*/
-ul.nav-tabs {
-    list-style: none;
-    background-color: transparent;
-    font-size: 1.4rem;
-}
-ul.nav-tabs li a {
-    height:36px;
-    color: #fff;
-    text-decoration: none;
-}
-ul.nav-tabs li:before {
-    color: #0275d8;
-}
-ul.nav-tabs li a:hover {
-    color: #0275d8;
-}
-ul.nav-tabs li.active a {
-    color: #0275d8;
-}
-
-/* Style the list */
-ul.breadcrumb {
-    padding: 10px 16px 0px 16px;
-    list-style: none;
-    background-color: transparent;
-    font-size: 1.4rem;
-}
-ul.breadcrumb li {
-    display: inline;
-}
-ul.breadcrumb li+li:before {
-    padding: 8px;
-    color: #fff;
-    content: "|";
-}
-ul.breadcrumb li a {
-    color: #fff;
-    text-decoration: none;
-}
-ul.breadcrumb li a:hover {
-    color: #fff;
-    text-decoration: underline;
-}
-ul.breadcrumb .member_rate {
-    font-size: 1.2rem;
-    color: #fff;
-    background-color: red;
-    padding:3px 5px;
-    margin-right:10px;
-}
-/* 최상단 메뉴 끝 */
-/* 최상단 로고 검색창 */
-.navbar-brand {
-    font-size:2.6rem;
-    color:#0275d8;
-}
-.navbar-brand span{
-    font-size:3rem;
-    color:#0275d8;
-}
-.navbar-brand font{
-    font-size:1.6rem;
-    color:#0275d8;
-}
-
-.navbar-form {
-    width:100%;
-    margin-top:15px;
-}
-
-#sel1 {
-    color:#0275d8;
-    font-weight: 600;
-    background-color:#e6f2ff;
-}
-
-.navbar-form #search {
-    width:52%;
-    background-color:#e6f2ff;
-}
-
-#ad1 {    
-    background-color: transparent;
-    width:170px;
-    height:68px;
-}
-/* 공통 상단 메뉴 끝 */
-
-/* 메인전용 시작 */
-/* 메인슬라이드 시작 */
-.mySlides {display:none}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 100%;
-  height:337px;
-  position: relative;
-  margin: auto;
-  border:2px solid #e6f2ff;
-}
-
-/* Caption text */
-.text {
-  color: #000;
-  font-size: 2rem;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 18px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Style the slideshow list */
-#slideshow_list {
-    max-height:50px;
-    margin-bottom:2%;
-    background-color:#e6f2ff;
-    border:1px solid #ccc;
-}
-ul.slideshow_list {
-    padding: 0.5% 1.6% 0% 1.6%;
-    color: #00ace6;
-    list-style: none;
-    background-color: transparent;
-    font-size: 1.6rem;
-    font-weight: 600;
-    width:100%
-}
-ul.slideshow_list li {
-    display: inline;
-    cursor: pointer;
-}
-ul.slideshow_list li+li:before {
-    padding: 0.8% 4%;
-    color: #00ace6;
-    content: "|";
-}
-ul.slideshow_list li a {
-    color: #00ace6;
-    text-decoration: none;
-    border: 3px solid transparent;
-    border-radius: 15px;
-    padding:0.3% 1.5%;
-}
-ul.slideshow_list li a:hover {
-    color: #00ace6;
-    border: 3px solid #0275d8;
-    border-radius: 15px;
-    background-color:#fff;
-    padding:0.3% 1.5%;
-}
-.slide-4, .slide-3 {
-    margin:auto;
-    width:100%;
-}
-.slide-4 img{
-    margin: 0 1.3%;
-    width:22%;   
-}
-.slide-3 img{
-    margin: 0;
-    width:27%;   
-}
-.slide-3 img.eb1{
-    margin: 0 1.3%;
-    width:47px;
-    height:337px;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation: fade 1.5s forwards;
-  animation: fade 1.5s forwards;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 0.687rem}
-}
-/* 메인슬라이드 끝 */
-/* 메인왼쪽메뉴 시작 */
-.main_lmenu {
-    list-style: none outside;
-    margin:0;
-    padding:0;
-}
-.main_lmenu li{
-    font-size:1.3rem;
-    font-weight: 400;
-    padding:2px 0;
-}
-.main_lmenu .title{
-    font-size:1.5rem;
-    font-weight: 600;
-    color:#00ace6;
-    margin-bottom:3px;
-}
-.main_lmenu li a{
-    color:#000;
-}
-/* 메인 중앙책분류 시작 */
-.main_book_img{
-    height:122px;
-    width: 100%;;
-    display:flex;    
-    align-items:flex-end;
-}
-.main_book_img img{ 
-    display: block;
-    margin: auto;
-}
-
-.main_book_titel{
-    font-size:1.8rem;
-    font-weight: 600;
-    color:#666;
-    margin:10px 0 20px 0;    
-}
-
-.main_book_info p{
-    font-size:1.3rem;
-    font-weight: 600;
-    padding:5px 0;
-}
-
-.main_book_info p span{
-    font-size:1.2rem;
-    padding:7px 0;
-    font-weight: 200;
-    color:#666;
-}
-
-.main_book_info2 {
-     padding:0 20px 5px 35px;
-}
-.main_book_info2 img{
-     padding:5px 7px 0 10px;
-     float:left;
-}
-/* 메인 중앙책분류 끝 */
-/* 메인 오른쪽 광고 베스트셀러 시작 */
-#ad2 {
-    border:1px solid #e6f2ff;
-    background-color: transparent;
-    width:216px;
-    height:144px;
-    margin-bottom:10px;
-}
-
-.best10 {
-    width:216px;
-    border:1px solid #e6f2ff;
-    background-color: #fff;
-    padding:10px;
-}
-.best10 ul.best10_text {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-.best10 ul.best10_text li{
-    margin:5px;
-    font-size:1.2rem;
-}
-.best10 .title{
-    font-size:1.3rem;
-    padding:1px 0px 5px 10px;
-    font-weight: 600;
-    color:#666;
-}
-.best10_text .number{
-    float: left;
-    width:20px;
-    height:16px;
-    margin-right:5px;
-    color: white;    
-    text-align: center;
-    font-size:1.2rem;
-    background-color: #00ace6;    
-    border-radius: 3px;
-}
-.best10_text .active {
-    margin-right:1px;
-    background-color: #ff8c1a;
-    color: white;
-}
-.best10_text .best10_img{
-    float: left;
-    width:85%;
-    margin-bottom:5px;
-}
-.best10_text .best10_img img{
-    padding-right:3px;
-    float:left;
-    width:65px;
-    height:auto;
-}
-/* 메인 오른쪽 끝 */
-
-/* 공통 하단 시작 */
-#footer {
-    padding:20px 10px;
-    font-size:1.2rem;
-    line-height: 1.8;
-}
-#footer p{
-    margin-top:20px;
-    font-size:1.3rem;
-}
-.footer_line{
-    background-color:#0275d8;
-    height:5px;
-}
-.footer_header{
-    background-color:#F4F4F4;
-    height:30px;
-    margin-bottom:20px;
-}
-
-.footer_header ul.breadcrumb {
-    padding: 7px 15px 0 20px;
-    font-size: 1.2rem;
-    width:100%;
-}
-.footer_header ul.breadcrumb li+li:before {
-    padding:0 7px;
-    color: #999;
-    content: "|";
-}
-.footer_header ul.breadcrumb li a {
-    color: #777;
-    text-decoration: none;
-}
-.footer_header ul.breadcrumb li a:hover {
-    color: #333;
-    text-decoration: underline;
-}
-/* 공통 하단 끝 */
-
-/* 고정 탑 메뉴 */
-#MOVE_TOP_BTN{
-    position: fixed; 
-    bottom: 10px; 
-    right: 10px; 
-    z-index: 100; 
-    cursor: pointer; 
-    display: block;
-}
-</style>
 </head>
 
 <body>
