박원서 로고추가 수정

--- a/WebContent/parkwonseo/gaif/yakgwan.html
+++ b/WebContent/parkwonseo/gaif/yakgwan.html
@@ -20,7 +20,7 @@ textarea {
 </style>
 </head>
 <body>
-<a href="#"><img src="../img/로고.png"/></a>
+<jsp:include page="../img/logo.jsp"/>
 	<div class="container">
 	<form action ="yakgwan.jsp">
 		<textarea>본인의 정보는 소중하다. 우리는 개인 정보를 마음껏 이용할것이다. 이것에 동의하지않으면 가입 할수 없다.</textarea>
