--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -51,10 +51,10 @@
                            <a href="main.html">로그아웃</a> <span class="divider"></span>
                        </li-->
                        <li>
-                           <a href="./member/login.html">로그인</a> <span class="divider"></span>
+                           <a href="sign/signUpPage.jsp">로그인</a> <span class="divider"></span>
                        </li>
                        <li>
-                           <a href="./member/join.html">회원가입</a> <span class="divider"></span>
+                           <a href="sign/signIn.jsp">회원가입</a> <span class="divider"></span>
                        </li>
                        <li>
                            <a href="#">마이페이지</a> <span class="divider"></span>
