--- a/WebContent/error/noURL.html
+++ b/WebContent/error/noURL.html
@@ -1,3 +1,28 @@
 <!DOCTYPE html>
+<head>
 <meta charset="utf-8">
-<h2>요청 하신 주소의 페이지가 없습니다.</h2>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+</head>
+
+<body>
+<script>
+swal({
+	title : "요청하신 페이지가 없습니다",
+	type: "error"
+}, function(){
+	window.location.replace("/main.jsp");
+}
+);
+</script>
+
+</body>
